--- a/report.tex
+++ b/report.tex
@@ -155,8 +155,8 @@
     \end{table}
 
 
-    Both the Poly24[AV] and Poly24[Tk] variants compared to unwashed cells
-    exhibits fold induction values in the range of $10^{-5}$.
+    It can be seen in both the Poly24[AV] and Poly24[Tk] variants compared to unwashed cells
+    exhibits fold induction values in the range of $10^{-5}$ when refering to Table 1 and Figures 2-5.
     Processing this value by using a $log_2$ scale will explain that the polyplex treatment at 24 hours
     against unwashed cells inhibits genetic transcription levels at a factor of 16.
 
@@ -197,8 +197,7 @@
     Lanes 12 and 13 (Wells: E11,E12) consist of -RT solutions for RPL13A displaying amplified genomic DNA.
 
 \section{Discussion}
-
-As discussed in the results, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
+As seen in Table 1, and as discussed in the results, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
 than either just cells or unwashed cells in the presence of an immunological response.
 The resulting value does depend upon if the control cells were washed or unwashed, which control
 protien was compared against and which immunological response was used. In all cases the
@@ -211,6 +210,14 @@ It is also interesting how washed versus unwashed cells
 exhibits a large difference in transcription levels. It is possible that the washed cells
 clears out the chemical treatment that would inhibit transcription rates. If so, a secondary
 control may need to be used when running this experiment again.
+This can also be verified through the agarose gel of Figure 1. Lanes 7 and 9
+that consist of just cells with an immunological transcript should yield normal
+transcription rates as the plain cell line should not be effected by an immunological response.
+However, lanes 11 and 14 are polyplex treated cells for 24 hours tested against the control protiens.
+Since the polyplex treated cells are not combined with an immunological indicator, transcription
+rates would not be inhibited and thus, normal transcription rates are seen.
+Lane 8 displays a lack of cDNA as it is a polyplex treated cell for 24 hours in the presence
+of Interferon-$\alpha$. This further verifies the statement that polyplex alone will inhibit genetic transcription.
 
 \section{Conclusion}
 
