Intro and methods done

--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -33,23 +33,24 @@
 \section{Introduction}
   \PARstart{G}{ene} therapy is an experimental method for treating disease by introducing a healthy copy of a
   defective gene into the patient's cells to alter the patients genetic material.
-  The alternative is a non viral gene therapy method which can often have simple and large scale production
+  The alternative is  non viral gene therapy which is a method that can often have simple and large scale production
   with low host immunogenicity. However, non viral gene therapy can often yield low transfection efficiencies.
-  This low yield is often due to The inate immune response. The inate immune response to foreign DNA (often by viruses or bacteria) through cytokines
-  as a trigger that rejects the foreign DNA through one of three possibilities. These possibilities include: inducing
-  cell death, halting the production of protien or recruiting immune cells to initiate an adaptive immune response (e.g. antibody protection).
-  New advances in technologies have improved transfection efficiency by modifying cytokines. Cytokines
+  This low yield is often due to the inate immune response. The inate immune response is an immune feedback mechanism
+  that reacts to foreign DNA (often by viruses or bacteria) through cytokines that rejects the foreign DNA through one of three possibilities.
+  These possibilities include: inducing cell death, halting the production of protien or recruiting immune cells to initiate an adaptive immune
+  response (e.g. antibody protection). New advances in technologies have improved transfection efficiency by modifying cytokines. Cytokines
   are small protiens that are involved in various types of cell signaling. Classifications of these signalings
-  include interferos, chemokines and interleukins.
-  This experiment aims to see if the inate immune response can be inhibited or manipulated to improve gene therapy treatments.
+  include interferos, chemokines and interleukins. This experiment aims to see if the inate immune response can be inhibited or manipulated
+  to improve gene therapy treatments.
 
-  In this experiment, the prostate cell line will be used for the transfection of foreign DNA. Prostate cells provide a glandular function
-  in the body by generating fluid which serves several functions in reproduction. The analysis will focus on quantifying foreign mRNA that will be
-  produced from the prostate cells. This process will be carried out by nanoparticles that are formed by the self-assembly of DNA/RNA and cationic polymers
-  called polyplexes. Polyplexes are specifically designed to deliver foreign genetic material to cells by a process called transfection.
+  In this experiment, the prostate cell line will be used for studying the simulated effects of this modified treatment. Prostate cells provide a glandular function
+  in the body by generating fluid which serves several functions in reproduction.
+  This process will be carried out by nanoparticles that are formed by the self-assembly of DNA/RNA and cationic polymers
+  called polyplexes. Polyplexes are specifically designed to deliver foreign genetic material to cells where the cells will incorporate
+  the foreign DNA into its own genomic DNA in a process known as transfection.
+  The analysis will focus on quantifying the transfection of foreign
+  mRNA that will be produced through the prostate cells to determine the effectiveness of this modified treatment.
 
-  There are two devices used in this experiment. The first device, the Qubit, is an electronic device that quantifies a substance through fluorescence.
-  The second device is qPCR.
   Reverse Transcriptase (RT)qPCR is a technique used to describe the level of genetic expression is occuring in vitro
   by measuring the amount of mRNA within a sample. In this technique, mRNA is reverse transcribed in to complementary DNA by
   an enzyme labeled reverse transcriptase.
@@ -120,11 +121,6 @@
 
 \section{Results}
 
-  \subsection{Qubit}
-    Following the cDNA synthesis, the concentrations were measured by the Qubit. The concentrations are as follows:
-    SD1 (standard 1): 54.27ng/$\mu$L, SD2 (standard 2): 1057.52ng/$\mu$L, Tk: 8.75ng/$\mu$L,
-    DA: 68.0ng/$\mu$L, AV: 487.0ng/$\mu$L, Ts: 28.0ng/$\mu$L.
-
   \subsection{QtPCR}
 
     \begin{table}[!hbt]
@@ -155,8 +151,8 @@
     \end{table}
 
 
-    It can be seen in both the Poly24[AV] and Poly24[Tk] variants compared to unwashed cells
-    exhibits fold induction values in the range of $10^{-5}$ when refering to Table 1 and Figures 2-5.
+    It can be seen in Table I that both the Poly24[AV] and Poly24[Tk] variants compared to unwashed cells
+    exhibits fold induction values in the range of $10^{-5}$. This can also be seen in Figures 2,3,4 and 5.
     Processing this value by using a $log_2$ scale will explain that the polyplex treatment at 24 hours
     against unwashed cells inhibits genetic transcription levels at a factor of 16.
 
