--- a/pdf/report.tex
+++ b/pdf/report.tex
@@ -16,16 +16,18 @@
 \begin{document}
 
 % Define document title and author
-\title{Testing the Effects of Transfection on Mammalian Cytokine RNA Expression}
+\title{Increased Transcriptional Effects through Polyplex and iCRT in the Presence of Immunological Transcripts}
 \author{Austin Mitchell Vecchio
 \thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
 \maketitle
 
 % Write abstract here
 \begin{abstract}
-  Abstract outline
-
-  This experiment aims to study the effect of genetic expression on polyplex treated cells against $\beta$-actin and INF$\alpha$.
+  To further investigate a larger yield in transfection for non viral gene therapy methods, this experiment
+  aims at studying the effects of polyplex treated cells for 6 hours and 24 hours, both with and without iCRT
+  against immunological transcripts Interferon-$\alpha$ and Interleukin6. This analysis was conducted through
+  reverse transcribing mRNA in human prostate cells and amplifying the resulting complementary DNA through PCR.
+  
 
 \end{abstract}
 
@@ -43,7 +45,7 @@
   include interferos, chemokines and interleukins. This experiment aims to see if the inate immune response can be inhibited or manipulated
   to improve gene therapy treatments.
 
-  In this experiment, the prostate cell line will be used for studying the simulated effects of this modified treatment. Prostate cells provide a glandular function
+  In this experiment, the human prostate cell line will be used for studying the simulated effects of this modified treatment. Prostate cells provide a glandular function
   in the body by generating fluid which serves several functions in reproduction.
   This process will be carried out by nanoparticles that are formed by the self-assembly of DNA/RNA and cationic polymers
   called polyplexes. Polyplexes are specifically designed to deliver foreign genetic material to cells where the cells will incorporate
@@ -193,17 +195,19 @@
     Lanes 12 and 13 (Wells: E11,E12) consist of -RT solutions for RPL13A displaying amplified genomic DNA.
 
 \section{Discussion}
-As seen in Table 1, and as discussed in the results, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
+As seen in Table 1, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
 than either just cells or unwashed cells in the presence of an immunological response.
 The resulting value does depend upon if the control cells were washed or unwashed, which control
 protien was compared against and which immunological response was used. In all cases the
-polyplex treatment at 24 hours alone inhibits genetic transcription. However,
+polyplex treatment at 24 hours alone inhibits genetic transcription.
+This relationship can be seen in Figures 2,3,4 and 5. However,
 the addition of iCRT in the treatment compared against the nowash at both six hour long treatments
-displays a positive growth in transcription levels. This would suggest that polyplex alone
+displays a positive growth in transcription levels. This can also be seen in figures 2-5 as the
+only rate comparsion (that is not a control) shows a positive correlation. This would suggest that polyplex alone
 would only inhibit transcription rates, but paired with iCRT or something of a similar nature
 increases transcription from a basil level. This would need to be further investigated.
-It is also interesting how washed versus unwashed cells
-exhibits a large difference in transcription levels. It is possible that the washed cells
+As seen in the figures (2-5), the comparsion between washed and uwashed cells also shows a postive correlation
+explaining increased transcription levels. It is possible that the washed cells
 clears out the chemical treatment that would inhibit transcription rates. If so, a secondary
 control may need to be used when running this experiment again.
 This can also be verified through the agarose gel of Figure 1. Lanes 7 and 9
