--- a/report.tex
+++ b/report.tex
@@ -27,7 +27,10 @@
   aims at studying the effects of polyplex treated cells for 6 hours and 24 hours, both with and without iCRT
   against immunological transcripts Interferon-$\alpha$ and Interleukin6. This analysis was conducted through
   reverse transcribing mRNA in human prostate cells and amplifying the resulting complementary DNA through PCR.
-  
+  In this experiment, it was seen that polyplex treated cells alone would inhibit the genetic expression of
+  the transfected prostate cells as these cells include foreign DNA. However, the addition of iCRT reverses
+  the known effect and increases transcription of the prostate cell line above basil levels. Thus, iCRT should
+  be investigated as an effective modification to standard non viral gene therapy procedures.
 
 \end{abstract}
 
@@ -125,6 +128,24 @@
 
   \subsection{QtPCR}
 
+  It can be seen in Table I that both the Poly24[AV] and Poly24[Tk] variants compared to unwashed cells
+  exhibits fold induction values in the range of $10^{-5}$. This can also be seen in Figures 2,3,4 and 5.
+  Processing this value by using a $log_2$ scale will explain that the polyplex treatment at 24 hours
+  against unwashed cells inhibits genetic transcription levels at a factor of 16.
+
+  When comparing Poly24[AV] and Poly24[Tk] variants against washed cells,
+  the resulting fold induction values were at a rate of $10^{-2}$. Processing this value
+  by using a $log_2$ scale will explain that the polyplex treatment
+  in this case against washed cells inhibits transcription levels at a factor of 6.6
+
+  The addition of iCRT to Polyplex at a treatment of only 6 hours against unwashed
+  cells at six hours exhibits a fold induction values at a rate of $10^2$. Processing
+  this value using a $log_2$ scale will explain that the polyplex treatment under these
+  conditions increased transcription levels at a factor of 6.6
+
+  As previously explained, when viewing the transcription levels of just cells
+  against unwashed cells, a large difference in transcription levels can be seen.
+
     \begin{table}[!hbt]
       % Center the table
       \begin{center}
@@ -152,33 +173,7 @@
       \end{center}
     \end{table}
 
-
-    It can be seen in Table I that both the Poly24[AV] and Poly24[Tk] variants compared to unwashed cells
-    exhibits fold induction values in the range of $10^{-5}$. This can also be seen in Figures 2,3,4 and 5.
-    Processing this value by using a $log_2$ scale will explain that the polyplex treatment at 24 hours
-    against unwashed cells inhibits genetic transcription levels at a factor of 16.
-
-    When comparing Poly24[AV] and Poly24[Tk] variants against washed cells,
-    the resulting fold induction values were at a rate of $10^{-2}$. Processing this value
-    by using a $log_2$ scale will explain that the polyplex treatment
-    in this case against washed cells inhibits transcription levels at a factor of 6.6
-
-    The addition of iCRT to Polyplex at a treatment of only 6 hours against unwashed
-    cells at six hours exhibits a fold induction values at a rate of $10^2$. Processing
-    this value using a $log_2$ scale will explain that the polyplex treatment under these
-    conditions increased transcription levels at a factor of 6.6
-
-    As previously explained, when viewing the transcription levels of just cells
-    against unwashed cells, a large difference in transcription levels can be seen.
-
   \subsection{Gel Electrophoresis}
-
-    \begin{figure}[t]
-      \centering
-      \includegraphics[width=8cm]{supergel}
-      \caption{A 1.2\% agarose gel used to further analyze discrepencies seen in the melt curves of the PCR product.}
-      \label{fig:mesh1}
-    \end{figure}
 
     Refering to Figure 1, it can be seen that the selections of PCR products was based off of melt curves that were inconsistent with
     surrounding wells of similar product (i.e. $\beta$-actin for just cells).
@@ -194,39 +189,41 @@
     Lane 6 (Well B1) is cells that were not washed for Interleukin 6.
     Lanes 12 and 13 (Wells: E11,E12) consist of -RT solutions for RPL13A displaying amplified genomic DNA.
 
-\section{Discussion}
-As seen in Table 1, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
-than either just cells or unwashed cells in the presence of an immunological response.
-The resulting value does depend upon if the control cells were washed or unwashed, which control
-protien was compared against and which immunological response was used. In all cases the
-polyplex treatment at 24 hours alone inhibits genetic transcription.
-This relationship can be seen in Figures 2,3,4 and 5. However,
-the addition of iCRT in the treatment compared against the nowash at both six hour long treatments
-displays a positive growth in transcription levels. This can also be seen in figures 2-5 as the
-only rate comparsion (that is not a control) shows a positive correlation. This would suggest that polyplex alone
-would only inhibit transcription rates, but paired with iCRT or something of a similar nature
-increases transcription from a basil level. This would need to be further investigated.
-As seen in the figures (2-5), the comparsion between washed and uwashed cells also shows a postive correlation
-explaining increased transcription levels. It is possible that the washed cells
-clears out the chemical treatment that would inhibit transcription rates. If so, a secondary
-control may need to be used when running this experiment again.
-This can also be verified through the agarose gel of Figure 1. Lanes 7 and 9
-that consist of just cells with an immunological transcript should yield normal
-transcription rates as the plain cell line should not be effected by an immunological response.
-However, lanes 11 and 14 are polyplex treated cells for 24 hours tested against the control protiens.
-Since the polyplex treated cells are not combined with an immunological indicator, transcription
-rates would not be inhibited and thus, normal transcription rates are seen.
-Lane 8 displays a lack of cDNA as it is a polyplex treated cell for 24 hours in the presence
-of Interferon-$\alpha$. This further verifies the statement that polyplex alone will inhibit genetic transcription.
+  \section{Discussion}
 
-\section{Conclusion}
+    As seen in Table 1, both the Poly24[AV] and Poly24[Tk] variants express lower transcription rates
+    than either just cells or unwashed cells in the presence of an immunological response.
+    A similar result was explained by the research conducted at University of Michigan (Matz, R. L. 2013).
+    The resulting value does depend upon if the control cells were washed or unwashed, which control
+    protien was compared against and which immunological response was used. In all cases the
+    polyplex treatment at 24 hours alone inhibits genetic transcription.
+    This relationship can be seen in Figures 2,3,4 and 5. However,
+    the addition of iCRT in the treatment compared against the nowash at both six hour long treatments
+    displays a positive growth in transcription levels. This can also be seen in figures 2-5 as the
+    only rate comparsion (that is not a control) shows a positive correlation. This would suggest that polyplex alone
+    would only inhibit transcription rates, but paired with iCRT or something of a similar nature
+    increases transcription from a basil level. This would need to be further investigated.
+    As seen in the figures (2-5), the comparsion between washed and uwashed cells also shows a postive correlation
+    explaining increased transcription levels. It is possible that the washed cells
+    clears out the chemical treatment that would inhibit transcription rates. If so, a secondary
+    control may need to be used when running this experiment again.
+    This can also be verified through the agarose gel of Figure 1. Lanes 7 and 9
+    that consist of just cells with an immunological transcript should yield normal
+    transcription rates as the plain cell line should not be effected by an immunological response.
+    However, lanes 11 and 14 are polyplex treated cells for 24 hours tested against the control protiens.
+    Since the polyplex treated cells are not combined with an immunological indicator, transcription
+    rates would not be inhibited and thus, normal transcription rates are seen.
+    Lane 8 displays a lack of cDNA as it is a polyplex treated cell for 24 hours in the presence
+    of Interferon-$\alpha$. This further verifies the statement that polyplex alone will inhibit genetic transcription.
 
-Polyplex by itself will only further inhibit transcription rates in the presence of an immunological response.
-However, the addition of iCRT to the treatement created a scenario where polyplex increased the
-transcription rates. The usage of iCRT in the treatment provides insight that may yield promising results towards
-a more stable version of non viral gene therapy. No conclusion was able to be derived from the timeframes of 6 hour
-and 24 hour treated polyplex. Thus, to futher understand the nature polyplex and iCRT treated cells in response to a specific duration,
-it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours both with and without iCRT.
+  \section{Conclusion}
+
+    Polyplex treatment by itself will only further inhibit transcription rates in the presence of an immunological response.
+    However, the addition of iCRT to the treatement created a scenario where polyplex increased the
+    transcription rates. The usage of iCRT in the treatment provides insight that may yield promising results towards
+    a more stable version of non viral gene therapy. No conclusion was able to be derived from the timeframes of 6 hour
+    and 24 hour treated polyplex. Thus, to futher understand the nature polyplex and iCRT treated cells in response to a specific duration,
+    it would be suggested that the polyplex cells are treated in 3 hour increments from 3 hours to 24 hours both with and without iCRT.
 
   \begin{table}[!hbt]
     % Center the table
@@ -289,84 +286,67 @@ it would be suggested that the polyplex cells are treated in 3 hour increments f
     \end{center}
   \end{table}
 
-  \begin{figure}[t]
-    \centering
-    \includegraphics[width=8cm]{il6-bactin}
-    \caption{Logarithmic fold Inductions for Interleukin-6 vs $\beta$-actin.
-    Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
-    }
-    \label{fig:mesh1}
-  \end{figure}
-
-  \begin{figure}[t]
-    \centering
-    \includegraphics[width=8cm]{il6-rpl13a}
-    \caption{Logarithmic fold Inductions for Interleukin-6 vs RPL13A.
-    Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
-    }
-    \label{fig:mesh1}
-  \end{figure}
-
-  \begin{figure}[t]
-    \centering
-    \includegraphics[width=8cm]{infa-bactin}
-    \caption{Logarithmic fold Inductions for Interferon-$\alpha$ vs $\beta$-actin.
-    Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
-    }
-    \label{fig:mesh1}
-  \end{figure}
-
-  \begin{figure}[t]
-    \centering
-    \includegraphics[width=8cm]{infa-rpl13a}
-    \caption{
-    Logarithmic fold Inductions for Interferon-$\alpha$ an immune cytokine vs RPL13A a standard protien.
-    Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
-    }
-    \label{fig:mesh1}
-  \end{figure}
-
 % Now we need a bibliography:
 \begin{thebibliography}{5}
-    %Each item starts with a \bibitem{reference} command and the details thereafter.
-    \bibitem{HOP96} % Transaction paper
-    J.~Hagenauer, E.~Offer, and L.~Papke. Iterative decoding of binary block
-    and convolutional codes. {\em IEEE Trans. Inform. Theory},
-    vol.~42, no.~2, pp.~429–-445, Mar. 1996.
+  \bibitem{Handout}
+  Unknown. Elucidating the Innate Immune Response(s) to Non-Viral Gene Therapy. Mol Bio Lab Week 6.
 
-    \bibitem{MJH06} % Conference paper
-    T.~Mayer, H.~Jenkac, and J.~Hagenauer. Turbo base-station cooperation for intercell interference cancellation. {\em IEEE Int. Conf. Commun. (ICC)}, Istanbul, Turkey, pp.~356--361, June 2006.
+  \bibitem{Article}
+  Matz, R. L., Erickson, B., Vaidyanathan, S., Kukowska-Latallo, J. F., Baker, J. R., Orr, B. G., & Holl, M. M. (2013).
+  Polyplex Exposure Inhibits Cell Cycle, Increases Inflammatory Response, and Can Cause Protein Expression without Cell Division.
+  Mol. Pharmaceutics Molecular Pharmaceutics, 10(4), 1306-1317. doi:10.1021/mp300470d
 
-    \bibitem{Proakis} % Book
-    J.~G.~Proakis. {\em Digital Communications}. McGraw-Hill Book Co.,
-    New York, USA, 3rd edition, 1995.
+  \bibitem{Instruction}
+  Maxima First Strand cDNA Synthesis Kit for RT-qPCR, with dsDNase. (n.d.). Retrieved from
+  https://www.lifetechnologies.com/order/catalog/product/K1671
 
-    \bibitem{talk} % Web document
-    F.~R.~Kschischang. Giving a talk: Guidelines for the Preparation and Presentation of Technical Seminars.
-    \url{http://www.comm.toronto.edu/frank/guide/guide.pdf}.
-
-    \bibitem{5}
-    IEEE Transactions \LaTeX and Microsoft Word Style Files.
-    \url{http://www.ieee.org/web/publications/authors/transjnl/index.html}
-
-%http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2143693/pdf/9144766.pdf
-%http://www.molbiolcell.org/content/22/21/4047.full.pdf+html?with-ds=yes
-
-%    @Article{Gabay2006,
-%    author="Gabay, Cem",
-%    title="Interleukin-6 and chronic inflammation",
-%    journal="Arthritis Research {\&} Therapy",
-%    year="2006",
-%    volume="8",
-%    number="2",
-%    pages="1--6",
-%    abstract="Interleukin (IL)-6 is produced at the site of inflammation and plays a key role in the acute phase response as defined by a variety of clinical and biological features such as the production of acute phase proteins. IL-6 in combination with its soluble receptor sIL-6R$\alpha$, dictates the transition from acute to chonic inflammation by changing the nature of leucocyte infiltrate (from polymorphonuclear neutrophils to monocyte/macrophages). In addition, IL-6 exerts stimulatory effects on T- and B-cells, thus favoring chronic inflammatory responses. Strategies targeting IL-6 and IL-6 signaling led to effective prevention and treatment of models of rheumatoid arthritis and other chronic inflammatory diseases.",
-%    issn="1478-6354",
-%    doi="10.1186/ar1917",
-%    url="http://dx.doi.org/10.1186/ar1917"
-%    }
+  \bibitem{Instruction}
+  Real-Time PCR Technology Basics. (n.d.). Retrieved from http://biosistemika.com/workshops/qpcr-basics/
 
 \end{thebibliography}
 
+    \begin{figure}[t]
+      \centering
+      \includegraphics[width=8cm]{supergel}
+      \caption{A 1.2\% agarose gel used to further analyze discrepencies seen in the melt curves of the PCR product.}
+      \label{fig:mesh1}
+    \end{figure}
+
+    \begin{figure}[t]
+      \centering
+      \includegraphics[width=8cm]{il6-bactin}
+      \caption{Logarithmic fold Inductions for Interleukin-6 vs $\beta$-actin.
+      Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
+      }
+      \label{fig:mesh1}
+    \end{figure}
+
+    \begin{figure}[t]
+      \centering
+      \includegraphics[width=8cm]{il6-rpl13a}
+      \caption{Logarithmic fold Inductions for Interleukin-6 vs RPL13A.
+      Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
+      }
+      \label{fig:mesh1}
+    \end{figure}
+
+    \begin{figure}[t]
+      \centering
+      \includegraphics[width=8cm]{infa-bactin}
+      \caption{Logarithmic fold Inductions for Interferon-$\alpha$ vs $\beta$-actin.
+      Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
+      }
+      \label{fig:mesh1}
+    \end{figure}
+
+    \begin{figure}[t]
+      \centering
+      \includegraphics[width=8cm]{infa-rpl13a}
+      \caption{
+      Logarithmic fold Inductions for Interferon-$\alpha$ an immune cytokine vs RPL13A a standard protien.
+      Refer to the analysis subsection of the methods section for insight on how this graph was constructed.
+      }
+      \label{fig:mesh1}
+    \end{figure}
 % Your document ends here!
 \end{document}
