--- a/report.tex
+++ b/report.tex
@@ -17,8 +17,7 @@
 
 % Define document title and author
 \title{Increased Transcriptional Effects through Polyplex and iCRT in the Presence of Immunological Transcripts}
-\author{Austin Mitchell Vecchio
-\thanks{Advisor: Dipl.--Ing.~Michelle Ammerman, Lehrstuhl f\"ur Nachrichtentechnik, TUM, WS 2050/2051.}}
+\author{Austin Mitchell Vecchio \\ (Spring 2016)}
 \maketitle
 
 % Write abstract here
